log
Thu 25 Apr 2024 12:35:32 AM UTC: 
 tests:  0|6
total_score: 0/70
2454f2c
Thu 25 Apr 2024 12:55:39 AM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
ed1301e
Thu 25 Apr 2024 12:56:49 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
e2e2419
Thu 25 Apr 2024 01:08:38 AM UTC: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:40: error: expected ‘;’ before ‘}’ token
   54 |         pos = (pos + 1) % map->capacity
      |                                        ^
      |                                        ;
......
   57 |       }
      |       ~                                 
Compilation failed
a2e50ed
Thu 25 Apr 2024 01:08:52 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1f2594c
Thu 25 Apr 2024 01:09:53 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
f08c509
Thu 25 Apr 2024 01:25:08 AM UTC: 
 hashmap.c | 29 ++++++++++++++++++++++++++---
 1 file changed, 26 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
943cbf4
Thu 25 Apr 2024 01:27:42 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
a11c2f3
Thu 25 Apr 2024 01:28:39 AM UTC: 
 hashmap.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  0|0
d3c3b2f
Thu 25 Apr 2024 01:31:12 AM UTC: 
 hashmap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  8|3
total_score: 40/70
eb1dff8
Thu 25 Apr 2024 01:37:37 AM UTC: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
8ec39c5
Thu 25 Apr 2024 01:45:14 AM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
33488d2
Thu 25 Apr 2024 01:47:26 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:140:1: error: control reaches end of non-void function [-Werror=return-type]
  140 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7380601
Thu 25 Apr 2024 01:47:59 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
a4b7d46
Thu 25 Apr 2024 01:50:38 AM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
859f654
Thu 25 Apr 2024 01:51:02 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|2
total_score: 50/70
04ecfff
Thu 25 Apr 2024 01:54:31 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
72bd55c
Thu 25 Apr 2024 01:56:15 AM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
fc3de51
Thu 25 Apr 2024 02:04:17 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:171:35: error: expected statement before ‘)’ token
  171 |       if (copia_i == map->current))
      |                                   ^
Compilation failed
9f7bdf8
Thu 25 Apr 2024 02:04:27 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
ec48aac
Thu 25 Apr 2024 02:07:54 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
7505ca8
Thu 25 Apr 2024 02:10:36 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|2
total_score: 50/70
2f7f196
Thu 25 Apr 2024 02:10:51 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
a9e5e9c
Thu 25 Apr 2024 02:11:34 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|2
total_score: 50/70
5d017c0
Thu 25 Apr 2024 02:13:09 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
51a0b2c
Thu 25 Apr 2024 02:14:00 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
32aaf8d
Thu 25 Apr 2024 02:15:35 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
8eb7b76
Thu 25 Apr 2024 02:18:38 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:167:38: error: expected ‘;’ before ‘while’
  167 |   map->current = ((map->current) + 1)
      |                                      ^
      |                                      ;
  168 |   while(map->current + 1 >= map->capacity && map->buckets[map->current] == NULL || map->buckets[map->current]->key == NULL)
      |   ~~~~~                               
hashmap.c:166:8: error: unused variable ‘copia_i’ [-Werror=unused-variable]
  166 |   long copia_i = map->current;
      |        ^~~~~~~
hashmap.c:177:1: error: control reaches end of non-void function [-Werror=return-type]
  177 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9b4c8dc
Thu 25 Apr 2024 02:18:57 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:168:43: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  168 |   while(map->current + 1 >= map->capacity && map->buckets[map->current] == NULL || map->buckets[map->current]->key == NULL)
      |                                           ^
cc1: all warnings being treated as errors
Compilation failed
3bb64f2
Thu 25 Apr 2024 02:19:30 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
4714ecb
Thu 25 Apr 2024 02:22:35 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  15|2
total_score: 50/70
05c19a9
Thu 25 Apr 2024 02:23:50 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
e855b06
Thu 25 Apr 2024 02:25:08 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
702581c
Thu 25 Apr 2024 02:26:00 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
4abc3c0
Thu 25 Apr 2024 02:28:55 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|2
total_score: 50/70
de57324
Thu 25 Apr 2024 02:30:49 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
dd01ae4
Thu 25 Apr 2024 02:33:19 AM UTC: 
 hashmap.c | 21 +++++++--------------
 1 file changed, 7 insertions(+), 14 deletions(-)
 tests:  16|1
total_score: 60/70
49ccdd0
